add api keys and fixture
